<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/piedra_papel_tijeras_lagarto_spock"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/maquina"
        android:textColor="@color/teal_200"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mostrarFragmentoMaquina"
        android:name="com.example.tarea4_3_puntuaciones_pmdm.MaquinaFragment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        tools:layout="@layout/fragment_maquina" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:contentDescription="@string/imagen_versus"
        android:gravity="center_horizontal"
        android:src="@drawable/versus" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mostrarFragmentoJugador"
        android:name="com.example.tarea4_3_puntuaciones_pmdm.JugadorFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        tools:layout="@layout/fragment_jugador" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/jugador"
        android:textColor="@color/teal_200"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        android:text="@string/puntuacion"
        android:textColor="@color/black"
        android:textSize="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/jugador"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPuntuacionJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/maquina"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPuntuacionMaquina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnReiniciarPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#ED7716"
        android:text="@string/reiniciar_puntuaciones"
        android:textColor="@color/white" />

</LinearLayout>